[tool.poetry]
name = "aws-cdk-config"
version = "0.1.0"
description = ""
authors = ["Mathew Moon <mmoon@quinovas.com>"]
readme = "README.md"
packages = [{include = "aws_cdk_config", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
typeguard = "^4.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"

[tool.pytest.ini_options]
xfail_strict = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
